--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@chapa_et/inline.js": "^1.0.1",
     "@clerk/express": "^1.7.43",
     "axios": "^1.13.1",
+    "chapa-nodejs": "^2.0.1",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
